Added time remaining display.

--- a/test circular player/test circular player/circular_player.html
+++ b/test circular player/test circular player/circular_player.html
@@ -21,6 +21,7 @@
 				<button id="forward" title="Forward" onclick="setLocation()"><i class="fa fa-forward fa-2x"></i></button>
 				<!-- <button id="backward" title="Backward"><i class="fa fa-random fa-lg"></i></button> -->
 				<input id="volume" name="volume" min="0" max="1" step="0.1" type="range" onchange="setVolume()" />
+				<div id="remaining" />
 			</div><!-- #controls -->
 
   </div><!-- #cover -->
