--- a/test circular player/test circular player/circular_player.html
+++ b/test circular player/test circular player/circular_player.html
@@ -5,29 +5,28 @@
 
 <body>
 
-  <div id="container">
-
-	<canvas id="progress" width="320" height="320"></canvas><!-- progress bar -->
-	<div id="player">
-		<audio id="audio">
+  <div id="circular_container">
+	<canvas id="circular_progress" width="320" height="320"></canvas><!-- progress bar -->
+	<div id="circular_player">
+		<audio id="circular_audio">
 			<source src="saharan_dust.mp3" type="audio/mpeg" codecs="mp3"></source>
 		</audio>
-		<img src="TI_saharan_dust.jpg"><!-- album cover -->
-		<div class="cover">
-			<div class="controls">
+		<img src="TI_saharan_dust.jpg">
+		<div class="circular_cover">
+			<div class="circular_controls">
         <!-- <button id="backward" title="Backward"><i class="fa fa-retweet fa-lg"></i></button> -->
 				<button id="backward" title="Backward" onclick="resetPlayer()"><i class="fa fa-backward fa-2x"></i></button>
 				<button id="play-pause" title="Play" onclick="togglePlayPause()"><i class="fa fa-play fa-3x"></i></button>
 				<button id="forward" title="Forward" onclick="setLocation()"><i class="fa fa-forward fa-2x"></i></button>
 				<!-- <button id="backward" title="Backward"><i class="fa fa-random fa-lg"></i></button> -->
 				<input id="volume" name="volume" min="0" max="1" step="0.1" type="range" onchange="setVolume()" />
-				<div id="remaining" />
-			</div><!-- #controls -->
+				<div id="remaining"></div>
+			</div><!-- #circular_controls -->
 
-  </div><!-- #cover -->
-</div><!-- #player -->
+    </div><!-- #circular_cover -->
+  </div><!-- #player -->
+  </div><!-- #container -->
 
-</div><!-- #container -->
 </body>
 <script src="circular_player.js"></script>
 </html>
